# onboardme

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Brewfile  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.brew  Dockerfile.release  Dockerfile.setup  README.md  RELEASE_NOTES  config_sample.yaml  grab_all_firefox_extensions.py  index.yaml  obm_config.json  onboardme  onboardme.py  onboardme_mac.py  onboardme_multi-os.py  packages.yml  pre_on_board_me.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.configs/email_filters/: README.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  🆕-feature-request.md  🐛-bug-report.md
.github/workflows/: cd-helm-release.yml  ci-helm-lint-test.yml  docker-push-daily.yml  helm-docs.yaml  python-lint-test.yml  python-publish.md  python-publish.yml  readme_contributors.yml
ansible/: README.md  ansible.cfg  config  demo.sh
ansible/inventories/: example.yaml
ansible/playbooks/: gather-facts.yaml  main-program.yaml
charts/onboardme/: Chart.yaml  README.md  values.yaml
configs/ansible_profiles/: README.md
configs/cron/: updates.sh
configs/dot_files/: .bashrc  .bashrc_k8s  .bashrc_k8s_completion  .hyper.js  .tmux.conf  .vimrc  .zshrc
configs/email/: README.md
configs/email_filters/: sort_security_events_to_folder.sieve
configs/feeds/: README.md
configs/firewall/: README.md  iptables.sh
configs/installers/: packages.yml
configs/iterm2/: Profiles.json
configs/karabiner-elements/: capstocontrol.json
configs/keyboard/: README.md  goku.json
configs/nextcloud/: README.md
configs/rc_files/: .bashrc  .hyper.js  .vimrc  .zshrc
configs/terminal/: README.md
cron/: README.md  alarms.sh  reminders_crontab
cron/alarm_scripts/: take_lunch.sh
debian/: README.md  apt_packages.txt  onboardme.py  onboardme.sh  packages.yml
docker/: Dockerfile  Dockerfile.arm  Dockerfile.arm-full  Dockerfile.kindaworking  Dockerfile.rust-builder  README.md  run_onboardme.sh
docker/arm/: Dockerfile  Dockerfile-see-screenshot-brew-says-wrong-ruby  docker_space_chalk  steps.sh
docker/arm_config/: config.yml  default-onbaordme-install.sh  default-onboardme-install.sh  devops-onboardme-install.sh  music-onboardme-install.sh  packages.yml
docker/testing/: Dockerfile.setup
docs/: _config.yml  diagram.md  gnome.md  index.md  lets-encrypt.md  style.css
docs/android/: README.md  android.md  screen_mirroring.md
docs/bash/: README.md  bash.md  colors.md  powerline.md
docs/cli/: cli.md
docs/email/: email.md  email_stack.md  neomutt.md  zathura.md
docs/firewall/: README.md  firewall.md
docs/firewalls/: README.md  firewalls.md
docs/freetube/: README.md  freetube.md
docs/front_end/: cli.md  index.md  markdown.md
docs/gaming/: Baldurs-Gate.md  gaming.md
docs/home_automation/: home-asisstant.md  home_automation.md
docs/ide/: index.md
docs/infosec/: infosec.md
docs/k8s/: k8s.md
docs/linux/: README.md  apt_vim_notes.md  gaming.md  gaming_on_linux.md  linux.md
docs/mac/: README.md  lil_mac_notes.txt  mac.md
docs/onboardme/: configuration.md  contributing.md  features.md  getting-started.md  installation.md  known_nonsense.md  onboardme.md  quick-start.md  todo.md
docs/operating_systems/: operating_systems.md
docs/paywalls/: index.md
docs/powerline/: powerline.md
docs/python/: images.md  index.md  notebooks.md  packaging.md  poetry.md  setuppy.md  web.md
docs/screen_sharing/: rdp.md  screen.md  screen_sharing.md  tmux.md
docs/ssl/: lets-encrypt.md  ssl.md
docs/terminal/: README.md  hyper.md  terminals.md
docs/terminal_emulators/: hyper.md  iterm2.md  terminal_emulators.md  wezterm.md
docs/terminals/: iterm2.md  terminals.md
docs/videos/: videos.md
docs/vim/: README.md  index.md  neovim.md  vim.md  vim_plugins.md  visual_mode.md
docs/virtual_machines/: multipass.md  qemu.md  virtual_machines.md
docs/vpn/: wireguard.md
docs/windows/: general.md  misc.md  screenshots.md  windows.md  wsl.md
dot_files/: .bashrc  .hyper.js  .tmux.conf  .vimrc  .wezterm.lua
email_filters/: README.md  bol_com_receipts-move.sieve  delivery_updates-label_delete.sieve  sort_receipts_to_folder.sieve
email_filters/purchases/: delivery_updates-label_delete.sieve  review_requests-delete.sieve
lib/: rich_click.py  util.py
notes/: Maxs_own_windows_vm_4_gaming_notes.md  config.hcl  lil_linux_literature.md  lil_linux_literature.txt  lil_mac_notes.txt  qemu.py  qemu.sh  regex.sh  vault.md  vm.yaml
notes/nextcloud/: nextcloud-values-SAMPLE.yml  nextcloud-values.yml
notes/vm_k8s/: README.md
onboardme/: __init__.py  console_logging.py  constants.py  cron.py  dot_files.py  env_config.py  firewall.py  help_text.py  ide_setup.py  misc.py  pkg_management.py  run_steps.py  subproc.py  sudo_setup.py
onboardme/config/: config.yml  default_config.yml  onboardme_config.yaml  onboardme_config.yml  packages.yaml  packages.yml
onboardme/scripts/: get_apt_list.sh  update_apt_sources.sh
onboardme/tui/: __init__.py  base.py  help_screen.py  make_screenshots.py  packages_screen.py  tui_config_screen.py  util.py
onboardme/util/: console_logging.py  env_config.py  rich_click.py  subproc.py
onboardme/utils/: yaml_with_comments.py
package_managers/: packages.yml
package_managers/brew/: Brewfile_Darwin  Brewfile_devops  Brewfile_linux  Brewfile_mac  Brewfile_standard  Brewfile_work
package_managers/pip3.10/: requirements.txt
rss/: Fluent_Reader_Export.opml  youtube-subscriptions-2022-02-16.opml
screenshots/: README.md
scripts/: README.md  update_todo.py
sieve_email_filters/: README.md  all_delivery_updates_label-delete  delivery_updates-label_delete  delivery_updates-label_delete.sieve  food-eating_out_receipts-move.sieve  product_service_review_requests-delete  review_requests-delete  review_requests-delete.sieve  sort_providers_to_folder.sieve
util/: console_logging.py  rich_click.py  subproc.py  subproc_wrapper.py
(+183 files in other folders)
