[tool.poetry]
name          = "onboardme"
version       = "0.17.1"
description   = "Install dot files and packages, including a base mode with sensible defaults to run on most computers running Debian based distros or macOS."
authors       = ["Jesse Hitch <jessebot@linux.com>"]
license       = "AGPL-3.0-or-later"
readme        = "README.md"
documentation = "https://jessebot.github.io/onboardme/onboardme"
repository    = "http://github.com/jessebot/onboardme"
keywords      = ["onboardme", "onboarding", "desktop-setup", "development-environment"]
classifiers   = ["Development Status :: 3 - Alpha",
                 "Programming Language :: Python :: 3.11",
                 "Operating System :: MacOS :: MacOS X",
                 "Operating System :: POSIX :: Linux",
                 "Intended Audience :: End Users/Desktop",
                 "Topic :: System :: Installation/Setup",
                 "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
packages      = [{include = "onboardme"}]
include       = ["onboardme/scripts/update_apt_sources.sh",
                 "onboardme/scripts/get_apt_list.sh",
                 "onboardme/config/onboardme_config.yaml",
                 "onboardme/config/packages.yaml"]

[tool.poetry.dependencies]
python    = "^3.11"
click     = "^8.1.3"
rich      = "^13.0.1"
PyYAML    = "^6.0"
GitPython = "^3.1.30"
wget      = "^3.2"
xdg       = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[tools.poetry.plugins."onboardme.application.plugin"]
"onboardme" = "onboardme:main"

[tool.poetry.scripts]
onboardme = 'onboardme:main'

[tool.poetry.urls]
"Bug Tracker" = "http://github.com/jessebot/onboardme/issues"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
